Closed
Bug 461924
Opened 17 years ago
Closed 17 years ago
crash [@ objc_msgSend][@ -[NSCachedImageRep _initWithSize:depth:separate:alpha:allowDeep:] ] trying to thumbnail about:config (either view) for Tabsposé
Categories
(Camino Graveyard :: Tabbed Browsing, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)
References
(
URL
)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
968 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1) Load about:config in a tab
2) Invoke Tabsposé
3) Observe exceptions
Oct 28 01:14:53 Qalaat-Samaan Camino[38197]: CGBitmapContextCreateImage: invalid context
Oct 28 01:14:53 Qalaat-Samaan Camino[38197]: *** NSRunLoop ignoring exception 'Can't cache image' that raised during posting of delayed perform with target 0x15ba7810 and selector 'loadNextThumbnailForViews:'
4) Switch back to normal view
5) Invoke Tabsposé again
6) Observe errors
Oct 28 01:14:53 Qalaat-Samaan [0x0-0x73a73a].org.mozilla.camino[38197]: Tue Oct 28 01:14:53 Qalaat-Samaan.local Camino[38197] <Error>: CGBitmapContextCreateImage: invalid context
Oct 28 01:15:04 Qalaat-Samaan Camino[38197]: CGBitmapContextCreateImage: invalid context
Oct 28 01:15:00 Qalaat-Samaan [0x0-0x73a73a].org.mozilla.camino[38197]: WARNING: NS_ENSURE_TRUE(mutableURL) failed: file /Users/smokey/Camino/dev/trunk/moZilla/content/xul/templates/src/nsXULContentUtils.cpp, line 338
7) Boom!
ER: A thumbnail of about:config, or perhaps a blank page
AR: Crash!
Flags: camino2.0?
| Assignee | ||
Comment 1•17 years ago
|
||
Yuck. I'll take a look.
Assignee: nobody → stuart.morgan+bugzilla
Flags: camino2.0? → camino2.0+
Target Milestone: --- → Camino2.0
Comment 2•17 years ago
|
||
Is about:config the only Gecko about: page that has this problem? (It's the only one I know of that has XUL and/or XML in it, but we should probably audit the rest of them.)
Hardware: Macintosh → All
| Reporter | ||
Comment 3•17 years ago
|
||
Yes, it's the only about: page with a problem.
| Assignee | ||
Comment 4•17 years ago
|
||
I have no idea why it stops returning a context, but it does, so guard against that.
Attachment #345422 -
Flags: superreview?(mikepinkerton)
Comment 5•17 years ago
|
||
Comment on attachment 345422 [details] [diff] [review]
fix
sr=pink
Attachment #345422 -
Flags: superreview?(mikepinkerton) → superreview+
| Reporter | ||
Comment 6•17 years ago
|
||
Stuart, will you be able to check this in soon, or should I get it in my next chicken-wrangling pass?
Summary: crash [@ objc_msgSend][@ -[NSCachedImageRep _initWithSize:depth:separate:alpha:allowDeep:] ] trying to thumbnail about:config (either view) → crash [@ objc_msgSend][@ -[NSCachedImageRep _initWithSize:depth:separate:alpha:allowDeep:] ] trying to thumbnail about:config (either view) for Tabsposé
| Assignee | ||
Comment 7•17 years ago
|
||
I'm not sure when I'll have time to watch the tree next; if you get to it before me, be my guest :)
| Reporter | ||
Comment 8•17 years ago
|
||
Checked in on cvs trunk for Stuart.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Crash Signature: [@ objc_msgSend][@ -[NSCachedImageRep _initWithSize:depth:separate:alpha:allowDeep:] ]
You need to log in
before you can comment on or make changes to this bug.
Description
•