Bug 461924 - Don't crash when the gfxQuartzSurface stops returning a context, e.g. when trying to thumbnail about:config.  Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, r/sr=pink